=== gnome-user-share 0.31 ===

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.31

2008-04-04  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (obexpush_init): And the same thing in ObexPush

2008-04-04  Matthias Clasen  <mclasen@redhat.com>

	* src/obexftp.c: Don't exit when dbus goes away.

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/user_share.c (main): Revert, you can't catch SIGKILL (duh!)

2008-04-03  Bastien Nocera  <hadess@hadess.net>

	* src/user_share.c (main): Handle SIGKILL as well

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Don't ship dav_user_2.2.conf in the tarball,
	spotted by Thorsten Vollmer <thorsten@thvo.de> (Closes: #525372)

=== gnome-user-share 0.30 ===

2008-03-31  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.30

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/user_share.c (main): Use the GTK+ main loop, not our own,
	re-use the X Display opened by GTK+ for ourselves, rather than opening
	a different one, fixes httpd children not getting killed properly
	when exiting the session (Closes: #519804)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/dav_user_2.2.conf.in: Allow users and distributions
	to change the default location for HTTPD modules with
	--with-modules-path=..., still defaults to /etc/httpd/modules/
	(Closes: #518647)

2008-03-25  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Generate the dav_user_2.2.conf
	file so the location of the dav_groupfile is the
	one used in the installation
	* data/dav_user_2.2.conf: Rename to...
	* data/dav_user_2.2.conf.in: ... this
	(Closes: #518681)

2008-03-08  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in:
	* data/Makefile.am:
	* src/file-share-properties.c: (flush_password), (update_ui),
	(main):
	Move from libglade to gtkbuilder. Fixes bug #519634

2008-03-04  Bastien Nocera  <hadess@hadess.net>
