@@ -1,4 +1,4 @@
-ServerRoot ${HOME}/.gnome2/user-share
+ServerRoot ${XDG_CONFIG_HOME}/user-share
 PidFile pid
 LockFile lock
 LogLevel crit
@@ -20,7 +20,7 @@ DocumentRoot ${XDG_PUBLICSHARE_DIR}
   AuthType Digest
   AuthName "Please log in as the user guest"
   AuthDigestDomain /
-  AuthDigestFile ${HOME}/.gnome2/user-share/passwd
+  AuthDigestFile ${XDG_CONFIG_HOME}/user-share/passwd
 
 
   <IfDefine RequirePasswordAlways>
