@@ -1,4 +1,4 @@
-ServerRoot ${HOME}/.gnome2/user-share
+ServerRoot ${XDG_CONFIG_HOME}/user-share
 PidFile pid
 LockFile lock
 LogLevel crit
@@ -24,7 +24,7 @@ DocumentRoot ${XDG_PUBLICSHARE_DIR}
   AuthDigestDomain /
 
   AuthDigestProvider file
-  AuthUserFile ${HOME}/.gnome2/user-share/passwd
+  AuthUserFile ${XDG_CONFIG_HOME}/user-share/passwd
   AuthGroupFile @DATADIR@/gnome-user-share/dav_groupfile
 
 
